<resources>
    <string name="app_name">FMKMeter</string>
    <string name="start_btn">Одиночное измерение</string>
    <string name="start_flow_btn">Начать</string>
    <string name="finish_btn">Завершить</string>
    <string name="info_btn">Инфо</string>
    <string name="set_settings_btn">Установить</string>
    <string name="btn_get_result">Результат</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="btn_chart_next">Следующий</string>
    <string name="btn_chart_prew">Предыдущий</string>
    <string name="btn_chart_load">К измерениям</string>
    <string name="btn_save_xml">Сохранить</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="progress_load_wait">Идёт загрузка, подождите...</string>
    <string name="menu_nav_meter">Измерения</string>
    <string name="menu_nav_chart">График</string>
    <string name="menu_info">Инфо</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_refresh">Обновить список</string>
    <string name="tv_tittle_all_byte">Всего байт:</string>
    <string name="tv_tittle_result_byte">Значимых байт:</string>
    <string name="tv_switch_result_chart">Результирующий</string>
    <string name="tv_tittle_sb_delta">Delta:</string>
    <string name="tv_tittle_sb_step">Отображать по:</string>
    <string name="tv_tittle_minmax">MinMax:</string>
    <string name="tv_tittle_size">Всего:</string>
    <string name="tv_tittle_index">Шаг:</string>

    <string name="pref_count">Кол-во точек после макс/мин</string>
    <string name="pref_inegr">Интегрирование результатов</string>

    <string name="msg_data_load_complete">Данные измерения подгружены, нажмите загрузить для отображения</string>
    <string name="msg_data_result_null">Нет данных удовлетворяющих условию</string>
    <string name="msg_data_not_found">Данные измерений не найдены</string>
    <string name="msg_data_not_complete_load">Данные ещё не подгрузились, подождите</string>
    <string name="msg_device_not_open">Устройство не подключено!</string>

    <string name="msg_file_save_success">Файл успешно сохранён:</string>
    <string name="msg_ext_stor_not">Внешнее пространство недоступно или у Вас нет разрешения на запись</string>
    <string name="msg_permissions_denied">Необходимые разрешения отсутствуют!</string>

    <string name="dlg_info_title">Информация</string>
    <string name="dlg_info_yes">Ok</string>
    <string name="dlg_permission_ok">Ok</string>
    <string name="dlg_permission_cancel">Cancel</string>
    <string name="dlg_permission_type">Запись файлов</string>
    <string name="dlg_permission_message">Для сохранения Вы должны разрешить следующее:</string>
    <string name="dlg_save_title">Параметры сохранения</string>
    <string name="dlg_save_empty_fields">Поля \"Участок\" и \"№ измерения\" должны быть заполнены!"</string>
    <string name="dlg_save_tv_uchastok">Участок</string>
    <string name="dlg_save_tv_put">Путь</string>
    <string name="dlg_save_tv_nopor">№ опоры</string>
    <string name="dlg_save_tv_nizm">№ измерения</string>
    <string name="dlg_save_tv_hint_uchastok">Введите участок</string>
    <string name="dlg_save_tv_hint_put">Введите путь</string>
    <string name="dlg_save_tv_hint_nopor">Введите № опоры</string>
    <string name="dlg_save_tv_hint_nizm">Введите № измерения</string>
    <string name="dlg_autosave_message">Т.к. у Вас выбрана опция автоматического измерения, необходимо ввести параметры для автоматического сохранения файлов.</string>
    <string name="pref_use_new_inegr">Использовать последний метод интегрирования</string>
    <string name="pref_time_dimension">Длительность измерения</string>
    <string name="pref_visible_first_integr">Отображать первое интегрирование</string>
    <string name="pref_summary_visible_first_integr">На графике будут отображаться результаты первого интегрирования</string>
    <string name="pref_delayed_start">Отложенный старт</string>
    <string name="pref_summary_delayed_start">(ПОКА НЕ РАБОТАЕТ)Измерение будет запускаться не сразу после нажатия на кнопку</string>
    <string name="pref_delayed_start_time">Длительность отложенного старта</string>
    <string name="pref_automatic_measurements">Автоматические измерения</string>
    <string name="pref_summary_automatic_measurements">(ПОКА НЕ РАБОТАЕТ)Новое измерение будет автоматически начинаться после завершения и сохранения данных предыдущего</string>
    <string name="timer_start_title">До начала измерения:</string>
    <string name="timer_measurements_title">До конца измерения:</string>

</resources>
